fix the alignment of button for addproduct

--- a/src/app/addproduct/addproduct.component.css
+++ b/src/app/addproduct/addproduct.component.css
@@ -66,5 +66,6 @@
   border-radius: 5px;
   left: 7em;
   position: relative;
+  bottom: 1.5vh;
 }
 
